# oksi

./: .gitignore  alembic.ini  chat.py  config.py  docker-compose.yml  pyproject.toml  server.py  test.py  test_mongo.py
ai/: giga_chat.py  utils.py
bot/core/: kb_wrap.py
bot/core/keyboards/: admin.py
bot/handlers/: admin.py
bot/routers/: admin.py  menu.py
bot/utils/: channel_sender.py  cheker.py  get_channel.py  states.py
db/MongoDB/: models.py  requests.py
db/SQL/migrations/: env.py
db/SQL/migrations/versions/: 06fea922942e_fix_tables.py  245fb4d5084f_edit_user.py  314a99a657de_first_version.py  6a3448a83716_add_m2m.py  753d935bf66a_add_tables.py  951be13d5eb8_add_tables.py  aced3c062226_edit_tables.py  de485e676b48_adit_channel.py
db/SQL/models/: base.py  channel.py  chat.py  user.py
db/SQL/requests/: user.py
